# hl-investment-dashboard

./: .dockerignore  .env.example  .gitignore  PhaseEleven.md  README.md  TODO.md  dbt_refactor_plan.md  docker-compose.yml  kimball_migration.md  main.py  portfolio_analysis.ipynb  pyproject.toml  run_local.ps1  semantic.md
backend/: Dockerfile  cron.py  requirements.txt
backend/app/: auth.py  db.py  main.py  models.py
backend/app/routers/: auth.py  (+3 more)
backend/bot/: claude.py  config.py  eval.py  executors.py  handlers.py  schema.py  tools.py
backend/migrations/: 001_init.sql  002_add_fund_short_name.sql  002_fix_holdings_view.sql  003_add_ingest_log.sql  004_add_users_providers.sql
backend/scripts/: cleanup_db.py  download_transactions.py  fetch_prices.py  generate_demo_data.py  ingest_transactions.py  run_ground_truth.py  set_password.py  setup_db.py  summarise_evals.py
cron/: Dockerfile
data/: README.md
data/imports/: README.md  dim_date.csv  dim_funds.csv  mapping_transaction_type.csv
dbt/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/models/: sources.yml
dbt/seeds/: dim_date.csv  dim_date.yml  seed_date.csv  seed_date.yml
docs/: data-flow.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/: App.tsx  AuthContext.tsx  index.css  types.ts
tests/: conftest.py
tests/api/: test_funds.py  test_portfolio.py  test_transactions.py
tests/bot/: conftest.py  test_claude_loop.py  test_executors.py  test_semantic.py  test_utils.py
x_archive/: PLAN.md  kimball_migration.md  portfolio_analysis.ipynb
(+126 files in other folders)
