[project]
name = "hl-investment-dashboard"
version = "0.1.0"
description = "Self-hosted investment analytics dashboard for Hargreaves Lansdowne accounts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.10.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "yfinance>=0.2.0",
    "python-dateutil>=2.8.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "apscheduler>=3.10.0",
    "dbt-duckdb>=1.8.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "ipykernel>=7.2.0",
]
